// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-dialog component should render 1`] = `
<ic-dialog buttons="false" class="ic-dialog-hidden" heading="Dialog heading">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-0">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
</ic-dialog>
`;

exports[`ic-dialog component should render as large size 1`] = `
<ic-dialog buttons="false" class="ic-dialog-hidden" heading="Dialog heading" size="large">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog large">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-14">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
</ic-dialog>
`;

exports[`ic-dialog component should render as medium size 1`] = `
<ic-dialog buttons="false" class="ic-dialog-hidden" heading="Dialog heading" size="medium">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog medium">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-12">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
</ic-dialog>
`;

exports[`ic-dialog component should render with a label 1`] = `
<ic-dialog buttons="false" class="ic-dialog-hidden" heading="Dialog heading" label="Dialog label">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label">
                Dialog label
              </ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-2">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
</ic-dialog>
`;

exports[`ic-dialog component should render with no buttons 1`] = `
<ic-dialog buttons="false" class="ic-dialog-hidden" heading="Dialog heading">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button aria-label="Dismiss" class="close-icon" data-gets-focus variant="icon">
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  Dialog content
</ic-dialog>
`;

exports[`ic-dialog component should render with slotted content 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-6">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <mock:shadow-root>
            <button class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <button class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          Confirm
        </ic-button>
      </div>
    </dialog>
  </mock:shadow-root>
  <ic-text-field data-gets-focus label="What is your favourite coffee?" value="">
    <mock:shadow-root>
      <ic-input-container>
        <ic-input-label for="ic-text-field-input-0" helpertext="" label="What is your favourite coffee?"></ic-input-label>
        <ic-input-component-container size="medium" validationstatus="">
          <input aria-describedby="" aria-invalid="false" aria-label="What is your favourite coffee?" autocapitalize="off" autocomplete="off" id="ic-text-field-input-0" inputmode="text" name="ic-text-field-input-0" placeholder="" type="text" value="">
        </ic-input-component-container>
      </ic-input-container>
    </mock:shadow-root>
    <input class="ic-input" name="ic-text-field-input-0" type="hidden" value="">
  </ic-text-field>
  <ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button">
    <mock:shadow-root>
      <button class="button" part="button" type="button">
        <slot></slot>
      </button>
    </mock:shadow-root>
    Click Me
  </ic-button>
</ic-dialog>
`;

exports[`ic-dialog component should render with slotted controls 1`] = `
<ic-dialog heading="Dialog heading" open="">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-60">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <slot name="dialog-controls"></slot>
      </div>
    </dialog>
  </mock:shadow-root>
  <ic-button class="ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button" onclick="alert('Confirmed!')" slot="dialog-controls" variant="primary">
    <mock:shadow-root>
      <button class="button" part="button" type="button">
        <slot></slot>
      </button>
    </mock:shadow-root>
    Confirm
  </ic-button>
</ic-dialog>
`;

exports[`ic-dialog component should render with the close button 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog with close button test">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog with close button test
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-112">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <mock:shadow-root>
            <button class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <button class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          Confirm
        </ic-button>
      </div>
    </dialog>
  </mock:shadow-root>
</ic-dialog>
`;

exports[`ic-dialog component should render with two default buttons 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-16">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <mock:shadow-root>
            <button class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <button class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          Confirm
        </ic-button>
      </div>
    </dialog>
  </mock:shadow-root>
</ic-dialog>
`;

exports[`ic-dialog component should render without the close button 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog hide close button test" hide-close-button="true">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog hide close button test
              </ic-typography>
            </slot>
          </div>
        </div>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <mock:shadow-root>
            <button class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <button class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          Confirm
        </ic-button>
      </div>
    </dialog>
  </mock:shadow-root>
</ic-dialog>
`;

exports[`should render as large size and disableWidthConstraint is set 1`] = `
<ic-dialog buttons="false" class="ic-dialog-hidden" disable-width-constraint="true" heading="Dialog heading" size="large">
  <mock:shadow-root>
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog disable-width-constraint large">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon" data-gets-focus exportparts="button">
          <mock:shadow-root>
            <ic-tooltip label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-134">
              <button aria-label="Dismiss" class="button" part="button" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </mock:shadow-root>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
</ic-dialog>
`;
